# email

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  example.env  sqlx-data.json
.sqlx/: query-277f31e877b19b5d1cb712ead54cd8c58b27110e02ee21384e7dfc1bd3e984c9.json  query-3207469f2a72881a68e444b9b7480efebdfe9aceb306fad5656b3b7246c4d14b.json  query-3c46ce7576d3f5d1c1a886708a45ca7b88834c6ce8b9d11b7a2402f02160c1a5.json  query-4a263302d94c0449b9d8c6e1d8b4b184de781a4dca2fcde5cc14e834bdc0021b.json  query-4e1bad006d5a8f0b09b75c775a4dbae5734d67fcfaf4cfd30f68601e5afdf8da.json  query-a90cb60d6702f2a2f0562641aedaefb72f50b89b11911a52abc96349b5f62462.json  query-c3a9d22d2c1cb4a8f81adcfbfba33e63f00f32f5dc0782ea2c96f2ce2cde75b3.json  query-d5ab58693f7d2bf1ee6e99a2bec682e35cae1416213bebb658e939f9568f5af9.json  query-e239bf2570a7c29972673c4d54b54bb79b43db6920bbcebf1e7cbcf3e16bf2b4.json  query-e86237724bb3f2d2d536462d1160edba22a61cf6b44f29fb8925f815ed168688.json
migrations/: 20230303143611_init.sql
src/: config.rs  handler.rs  main.rs
src/handler/: email.rs  mod.rs
src/repository/: group.rs  mod.rs  subcriber.rs
src/service/: email.rs  group.rs  mod.rs  subscriber.rs
