[package]
name = "email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "env"] }
anyhow = "1.0.68"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
async-trait = "0.1.63"
mockall = "0.11.3"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "time",
  "offline",
] }
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
tonic = "0.8.3"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
madtofan-microservice-common = { path="../common" }
dotenv = "0.15.0"
